Enable USB CDC ACM for serial console logging

--- a/boards/shields/corne/corne_left.conf
+++ b/boards/shields/corne/corne_left.conf
@@ -1,6 +1,9 @@
 # Enable USB logging for debugging
 CONFIG_ZMK_USB_LOGGING=y
 
+# Enable USB console
+CONFIG_USB_CDC_ACM=y
+
 # Increase log level
 CONFIG_LOG=y
 CONFIG_ZMK_LOG_LEVEL_DBG=y
