--- a/boards/shields/corne/corne_left.conf
+++ b/boards/shields/corne/corne_left.conf
@@ -3,8 +3,15 @@ CONFIG_ZMK_USB_LOGGING=y
 
 # Enable USB console
 CONFIG_USB_CDC_ACM=y
+CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=y
+
+# Force USB device
+CONFIG_ZMK_USB=y
 
 # Increase log level
 CONFIG_LOG=y
 CONFIG_ZMK_LOG_LEVEL_DBG=y
 CONFIG_KERNEL_LOG_LEVEL_DBG=y
+
+# Increase console buffer
+CONFIG_LOG_BUFFER_SIZE=4096
