Rename shield to custom_kb to avoid conflict with built-in corne

--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: custom_kb_left
   - board: nice_nano_v2
-    shield: corne_right
+    shield: custom_kb_right
