--- a/boards/shields/custom_kb/custom_kb.zmk.yml
+++ b/boards/shields/custom_kb/custom_kb.zmk.yml
@@ -1,6 +1,6 @@
 file_format: "1"
-id: corne
-name: Corne
+id: custom_kb
+name: Custom KB
 type: shield
 url: https://github.com/foostan/crkbd/
 requires: [pro_micro]
@@ -11,5 +11,5 @@ features:
   - underglow
   - studio
 siblings:
-  - corne_left
-  - corne_right
+  - custom_kb_left
+  - custom_kb_right
