--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,5 @@
 include:
   - board: nice_nano_v2
     shield: custom_kb_left
-#  - board: nice_nano_v2
-#    shield: custom_kb_right
+  - board: nice_nano_v2
+    shield: custom_kb_right
